@@ -1,3 +1,4 @@
+* Remove required attribute on Boolean fields
 * Add One2One field
 * Add AUTOINCREMENT to sqlite primary key
 
